tests/type-check/bad/too-many-args.arr

fun f(a :: Any, b :: Any):
  5
end

f(5, 6, 7)
